Fix overflow and refactor

--- a/src/styles/Components/Description.scss
+++ b/src/styles/Components/Description.scss
@@ -2,20 +2,18 @@
 @import '../mixins.scss';
 
 .Description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 3rem 4rem;
+  padding: 7rem 7rem;
   width: 100vw;
   min-height: 100vh;
-  height: 110vh;
-  overflow: hidden;
+  height: auto;
   background-color: $secondary-background-color;
   color: $secondary-color;
+  overflow-y: hidden;
 
   * {
     font-family: $secondary-font;
+    line-height: 2rem;
+    font-size: 1.1rem;
   }
 
   span {
@@ -36,9 +34,10 @@
   }
 
   ul {
-    max-width: 35rem;
+    // max-width: 35rem;
     list-style: none;
     position: relative;
+    padding-left: 4rem;
     bottom: -100vh;
     opacity: 0;
 
