--- a/src/styles/Components/SkillCard.scss
+++ b/src/styles/Components/SkillCard.scss
@@ -2,15 +2,14 @@
 @import '../mixins.scss';
 
 .SkillCard {
-  height: 100%;
-
   * {
     font-family: $primary-font;
   }
 
   h3, ul, hr {
     position: relative;
-    bottom: -100vh;
+    // bottom: -100vh;
+    transform: translateY(100vh);
   }
 
   h3 {
@@ -22,17 +21,17 @@
 
   ul {
     padding-top: 1rem;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: repeat(9, 1fr);
     height: calc(100% - 1.25rem);
     list-style: none;
 
     @include transition-setup($delay: .5s);
 
     li {
-      flex: 1;
       font-weight: normal;
       font-size: .9rem;
+      height: auto;
     }
   }
 
@@ -46,6 +45,6 @@
 
 .reveal .SkillCard {
     h3, ul, hr {
-      bottom: 0;
+      transform: translateY(0);
   }
 }
