--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,6 +13,7 @@ $secondary-background-color: #3A2238;
 $divider-color: rgba(58, 34, 56, .2);
 $success-color: rgb(34, 161, 34);
 
+$breakpoint-lg: 992px;
 $breakpoint-md: 768px;
 $breakpoint-lt: 576px;
 
